# GHEX

./: .bumpversion.toml  .clang-format  .git-blame-ignore-revs  .git_formater_config  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  Dockerfile  LICENSE  LICENSE_HEADER  README.md  index.html  latest  pyproject.toml  shell.nix
benchmarks/: CMakeLists.txt  atlas_halo_exchange_nodecolumns.cpp  atlas_halo_exchange_nodecolumns.cu  comm_2_test_halo_exchange_3D_generic_full.cpp  comm_2_test_halo_exchange_3D_generic_full.cu  gcl_test_halo_exchange_3D_generic_full.cpp  gcl_test_halo_exchange_3D_generic_full.cu  gtest_main.cpp  gtest_main_boost.cpp  simple_comm_test_halo_exchange_3D_generic_full.cpp  simple_rma.cpp  simple_rma.cu  unstructured_parmetis.cpp  unstructured_parmetis.cu
benchmarks/transport/: CMakeLists.txt  Makefile  README  callback_communicator.hpp  circular_allocator.hpp  communicator_mpi.hpp  communicator_ucx.hpp  communicator_ucx_nbr.hpp  debug.h  fhex_p2p_bi_cb_avail_mt.f90  fhex_p2p_bi_cb_wait_mt.f90  fhex_p2p_bi_ft_avail_mt.f90  fhex_p2p_bi_ft_wait_mt.f90  ghex_futures.cpp  ghex_futures_mt.cpp  ghex_msg_cb.cpp  ghex_msg_cb_avail.cpp  ghex_msg_cb_avail_mt.cpp  ghex_msg_cb_dynamic.cpp  ghex_msg_cb_dynamic_resubmit.cpp  ghex_msg_cb_mt.cpp  ghex_msg_cb_resubmit.cpp  ghex_p2p_bi_cb_avail.cpp  ghex_p2p_bi_cb_avail_mt.cpp  ghex_p2p_bi_cb_avail_mt_new.cpp  ghex_p2p_bi_cb_avail_mt_orig.cpp  ghex_p2p_bi_cb_wait.cpp  ghex_p2p_bi_cb_wait_mt.cpp  ghex_p2p_bi_ft_avail.cpp  ghex_p2p_bi_ft_avail_mt.cpp  ghex_p2p_bi_ft_wait.cpp  ghex_p2p_bi_ft_wait_mt.cpp  ghex_p2p_bi_rt_avail_mt.cpp  ghex_p2p_cb.cpp  ghex_p2p_cb_avail.cpp  ghex_p2p_cb_avail_mt.cpp  ghex_p2p_cb_dynamic.cpp  ghex_p2p_cb_dynamic_resubmit.cpp  ghex_p2p_cb_dynamic_resubmit_mt.cpp  ghex_p2p_cb_mt.cpp  (+43 more)
bindings/: CMakeLists.txt  communicator_bind.cpp  context_bind.cpp  context_bind.hpp  cubed_sphere_bind.cpp  future_bind.cpp  future_bind.hpp  ghex_comm_mod.f90  ghex_context_mod.f90  ghex_cubed_sphere_mod.f90  ghex_defs.f90  ghex_defs.hpp  ghex_exchange_mod.f90  ghex_future_mod.f90  ghex_message_mod.f90  ghex_mod.f90  ghex_request_mod.f90  ghex_structured_mod.f90  ghex_utils.f90  message_bind.cpp  message_bind.hpp  obj_wrapper.hpp  request_bind.cpp  request_bind.hpp  sizes.cpp  structured_bind.cpp  structured_bulk_bind.cpp  structured_staged_bind.cpp
bindings/fhex/: CMakeLists.txt  communicator_bind.cpp  context_bind.cpp  context_bind.hpp  cubed_sphere_bind.cpp  future_bind.cpp  ghex_comm_mod.f90  ghex_cubed_sphere_mod.f90  ghex_defs.f90  ghex_defs.hpp  ghex_future_mod.f90  ghex_message_mod.f90  ghex_mod.f90  ghex_request_mod.f90  ghex_structured_mod.f90  ghex_unstructured_mod.f90  message_bind.cpp  obj_wrapper.cpp  obj_wrapper.hpp  request_bind.cpp  request_bind.hpp  sizes.cpp  structured_bind.cpp  structured_bulk_bind.cpp  structured_staged_bind.cpp  unstructured_bind.cpp
bindings/python/: CMakeLists.txt  MANIFEST.in  README.md  config.cpp  context_shim.cpp  context_shim.hpp  min-requirements-test.txt  module.cpp  mpi_comm_shim.cpp  mpi_comm_shim.hpp  pyproject.toml  requirements-test.in  requirements-test.txt  requirements.txt  setup.cfg  setup.py  types.hpp
bindings/python_new/: CMakeLists.txt  __init__.py  config.cpp  context_shim.cpp  module.cpp  mpi_comm_shim.cpp
scripts/: format  (+5 more)
test/: CMakeLists.txt  test_aligned_allocator.cpp  test_context.cpp  test_decomposition.cpp  test_mpi_communicator.cpp  test_unified_memory_allocator.cpp
test/bindings/: CMakeLists.txt  test_f_barrier.f90  test_f_callbacks_multi.f90  test_f_callbacks_p2p.f90  test_f_communicator.f90  test_f_cubed_sphere.f90  test_f_cubed_sphere_os.f90  test_f_future.f90  test_f_message.f90  test_f_send_multi.f90  test_f_send_recv_cb.f90  test_f_send_recv_ft.f90  test_f_sendrecv.f90  test_f_structured_components.f90
test/mpi_runner/: CMakeLists.txt  gtest_main_mpi.cpp  mpi_listener.hpp  mpi_test_fixture.hpp
test/unstructured/: CMakeLists.txt  test_user_concepts.cpp  unstructured_test_case.hpp
test/util/: memory.hpp  nccl_test_helpers.hpp
test2/: CMakeLists.txt  test_aligned_allocator.cpp
test2/bindings/: CMakeLists.txt  test_f_message.f90  test_f_structured_components.f90
test2/glue/: CMakeLists.txt
test2/mpi_runner/: mpi_test_fixture.hpp
test2/structured/: CMakeLists.txt  test_gt_datastore.cpp
test2/unstructured/: test_user_concepts.cpp
test2/util/: memory.hpp
tests/: CMakeLists.txt  aligned_allocator.cpp  atlas_integration.cpp  atlas_integration_comm_2.cpp  atlas_integration_comm_2.cu  atlas_integration_comm_2_GHEX_only.cu  communication_object.cpp  communication_object_2.cpp  communication_object_2.cu  cubed_sphere_halo_generator.cpp  cubed_sphere_transform.cpp  data_store_test.cpp  data_store_test.cu  decomposition.cpp  gcl2.cpp  gcl2_app.cpp  gcl2_managed.cpp  gcl2_nomtMPI.cpp  gcl2_onesided.cpp  generic_grid_descriptor.cpp  generic_interfaces.cpp  generic_interfaces1D.cpp  generic_interfaces1D_mt.cpp  generic_interfaces8.cpp  gpu_test.cu  gtest_main_atlas.cpp  gtest_main_boost.cpp  gtest_main_gpu.cpp  halo_range.cpp  local_rma.cpp  local_rma.cu  mpi_all_to_all.cpp  mpi_allgather.cpp  mpi_listener.hpp  pattern.cpp  range_loops.cpp  regular_grid_descriptor.cpp  simple_regular_exchange.cpp  simple_regular_exchange.cu  test_halo_exchange_3D_generic.cpp  (+10 more)
tests/bindings/: CMakeLists.txt  communication_object.f90  test_communicator.f90  test_context.f90  test_f_barrier.f90  test_f_communication_object.f90  test_f_communicator.f90  test_f_context.f90  test_f_cubed_sphere.f90  test_f_cubed_sphere_os.f90  test_f_message.f90  test_f_send_multi.f90  test_f_send_recv_cb.f90  test_f_send_recv_ft.f90  test_f_structured.f90  test_f_structured_components.f90  test_message.f90  test_send_recv_cb.f90  test_send_recv_ft.f90  test_sendrecv.f90
tests/cubed_sphere/: CMakeLists.txt  exchange.cpp  exchange.cu  transform.cpp
tests/transport/: CMakeLists.txt  test_attach_detach.cpp  test_barrier.cpp  test_barrier_mt.cpp  test_cancel.cpp  test_cancel_request.cpp  test_context.cpp  test_locality.cpp  test_low_level.cpp  (+4 more)
(+728 files in other folders)
